skill gap fixed

--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 16px;
     margin-top: 10px;
     transition: transform 300ms ease-in-out;
 }
